# dotfiles

./: .bash_profile  .gitconfig  .gitignore  .tmux.conf  .zshrc  README.md  bashrc  boot.properties  emacs.AppleScript  flake.nix  profile.boot  setup  tmux.terminfo
.codex/: AGENTS.md  config.toml  notify.py
.emacs.d/: init.el
.emacs.d/customizations/: editing.el  elisp-editing.el  fonts.el  hacks.el  misc.el  navigation.el  setup-clojure.el  setup-css.el  setup-elm.el  setup-haskell.el  setup-java.el  setup-js.el  setup-latex.el  setup-markdown.el  setup-neotree.el  setup-powerline.el  setup-prettier.el  setup-reason.el  setup-smartparens.el  shell-integration.el  ui.el
.emacs.d/themes/: color-theme-tomorrow.el
.lein/: profiles.clj
kitty/: kitty.conf
nix/: apply-esy-patch.sh  common-packages.nix  configuration.nix  default.nix  esy-shell.nix  flake.nix  hardware-configuration.nix  macos-packages.nix  nixos-configurations.nix  node-env.nix.patch  overlays.nix  sources.nix
nix/bs-platform/: node-packages.nix
nix/cachix/: anmonteiro.nix
nix/esy/: node-env.nix  node-packages.nix
nix/ffmpeg/: default.nix
nix/gmp/: default.nix
nix/homies/: common-packages.nix  macos-packages.nix  nixenv-packages.nix
nix/libffi/: default.nix
nix/libpng/: default.nix
nix/lumo-cljs/: node-packages.nix
nix/nix-npm-install/: default.nix  foo.sh  node-packages.nix
nix/now/: node-packages.nix
nix/xmonad/: xmonad.hs
nvim/: .netrwhist  init.lua  init.vim  lazy-lock.json
nvim/fff-tui/: Cargo.toml  flake.nix
nvim/fff-tui/src/: lib.rs  main.rs
rlwrap/: rlwrap.md
(+90 files in other folders)
